seo changes url

--- a/ReHouse.FrontEnd/Views/Cart/Index.cshtml
+++ b/ReHouse.FrontEnd/Views/Cart/Index.cshtml
@@ -7,7 +7,7 @@
         <pre> </pre>
         <p>/</p>
         <pre> </pre>
-        <a href="/cart">Избранное</a>
+        <a href="/cart/">Избранное</a>
     </div>
 </div>
 <div class="h2novostroy"><h2>Избранные объявления</h2></div>
