--- a/ReHouse.FrontEnd/Views/Email/Index.cshtml
+++ b/ReHouse.FrontEnd/Views/Email/Index.cshtml
@@ -7,7 +7,7 @@
         <pre> </pre>
         <p>/</p>
         <pre> </pre>
-        <a href="/email">Обратный звонок</a>
+        <a href="/email/">Обратный звонок</a>
     </div>
 </div>
 <div class="managers">
