--- a/ReHouse.FrontEnd/Views/Home/Contacts.cshtml
+++ b/ReHouse.FrontEnd/Views/Home/Contacts.cshtml
@@ -15,7 +15,7 @@
         <pre> </pre>
         <p>/</p>
         <pre> </pre>
-        <a href="/home/contacts">Контакты</a>
+        <a href="/home/contacts/">Контакты</a>
     </div>
 </div>
 <div class="adress">
