--- a/ReHouse.FrontEnd/Views/Home/Index.cshtml
+++ b/ReHouse.FrontEnd/Views/Home/Index.cshtml
@@ -89,7 +89,7 @@
                 </li>
             }
         </ul>
-        <a href="/sale/flat" class="moremore" id="more">Подробнее</a>
+        <a href="/sale/flat/" class="moremore" id="more">Подробнее</a>
     </div>
     <div class="streak"></div>
 
@@ -129,7 +129,7 @@
                 </li>
             }
         </ul>
-        <a href="/newbuilding/index" id="more">Подробнее</a>
+        <a href="/newbuilding/" id="more">Подробнее</a>
     </div>
     <div class="streak"></div>
 
@@ -171,7 +171,7 @@
             }
 
         </ul>
-        <a href="/sale/flat" id="more">Подробнее</a>
+        <a href="/sale/flat/" id="more">Подробнее</a>
     </div>
     <div class="streak"></div>
 
@@ -212,6 +212,6 @@
                 </li>
             }
         </ul>
-        <a href="/sale/house" id="more">Подробнее</a>
+        <a href="/sale/house/" id="more">Подробнее</a>
     </div>
 </div>
