--- a/ReHouse.FrontEnd/Views/Manager/Index.cshtml
+++ b/ReHouse.FrontEnd/Views/Manager/Index.cshtml
@@ -7,7 +7,7 @@
         <pre> </pre>
         <p>/</p>
         <pre> </pre>
-        <a href="/manager">Менеджеры</a>
+        <a href="/manager/">Менеджеры</a>
     </div>
 </div>
 <div class="managers">
