--- a/ReHouse.FrontEnd/Views/Map/Index.cshtml
+++ b/ReHouse.FrontEnd/Views/Map/Index.cshtml
@@ -7,7 +7,7 @@
         <pre> </pre>
         <p>/</p>
         <pre> </pre>
-        <a href="/map">Карта сайта</a>
+        <a href="/map/">Карта сайта</a>
     </div>
 </div>
 <div class="h2novostroy"><h2>Карта сайта <span>REHOUSE</span></h2></div>
@@ -17,32 +17,32 @@
         <li>
             <a>2. Продажа</a>
             <ul>
-                <li><a href="/sale/flat">- Купить квартиру</a></li>
-                <li><a href="/sale/house">- Купить дом</a></li>
-                <li><a href="/sale/homestead">- Купить участок</a></li>
-                <li><a href="/sale/commerce">- Купить коммерцию</a></li>
+                <li><a href="/sale/fla/t">- Купить квартиру</a></li>
+                <li><a href="/sale/house/">- Купить дом</a></li>
+                <li><a href="/sale/homestead/">- Купить участок</a></li>
+                <li><a href="/sale/commerce/">- Купить коммерцию</a></li>
             </ul>
         </li>
         <li>
             <a>3. Аренда</a>
             <ul>
-                <li><a href="/rent/flat">- Снять квартиру</a></li>
-                <li><a href="/rent/house">- Снять дом</a></li>
-                <li><a href="/rent/commerce">- Снять коммерцию</a></li>
-                <li>@*<a href="/rent/homestead">- Снять участок</a>*@</li>
+                <li><a href="/rent/flat/">- Снять квартиру</a></li>
+                <li><a href="/rent/house/">- Снять дом</a></li>
+                <li><a href="/rent/commerce/">- Снять коммерцию</a></li>
+                <li>@*<a href="/rent/homestead/">- Снять участок</a>*@</li>
             </ul>
         </li>
-        <li><a href="/newbuilding">4. Новострои</a></li>
-        <li><a href="/manager">5. Менеджеры</a></li>
+        <li><a href="/newbuilding/">4. Новострои</a></li>
+        <li><a href="/manager/">5. Менеджеры</a></li>
         <li>
             <a>6. О нас</a>
             <ul>
-                <li><a href="/home/about">- О компании</a></li>
-                <li><a href="/vacancy">- Вакансии агентства</a></</li>
+                <li><a href="/home/about/">- О компании</a></li>
+                <li><a href="/vacancy/">- Вакансии агентства</a></</li>
             </ul>
         </li>
-        <li><a href="/news">7. Новости</a></li>
-        <li><a href="/feedback">8. Отзывы</a></li>
-        <li><a href="email">9. Обратная связь</a></li>
+        <li><a href="/news/">7. Новости</a></li>
+        <li><a href="/feedback/">8. Отзывы</a></li>
+        <li><a href="/email/">9. Обратная связь</a></li>
     </ol>
 </div>
