--- a/ReHouse.FrontEnd/Views/NewBuilding/Index.cshtml
+++ b/ReHouse.FrontEnd/Views/NewBuilding/Index.cshtml
@@ -11,7 +11,7 @@
             <pre> </pre>
             <p>/</p>
             <pre> </pre>
-            <a href="/newbuilding">Новострои</a>
+            <a href="/newbuilding/">Новострои</a>
         </div>
     </div>
 </span>
