--- a/ReHouse.FrontEnd/Views/News/Index.cshtml
+++ b/ReHouse.FrontEnd/Views/News/Index.cshtml
@@ -60,7 +60,7 @@
         <pre> </pre>
         <p>/</p>
         <pre> </pre>
-        <a href="/news">Новости</a>
+        <a href="/news/">Новости</a>
     </div>
 </div>
 <div class="news">
