--- a/ReHouse.FrontEnd/Views/Rent/Flat.cshtml
+++ b/ReHouse.FrontEnd/Views/Rent/Flat.cshtml
@@ -12,7 +12,7 @@
             <pre> </pre>
             <p>/</p>
             <pre> </pre>
-            <a href="/rent/flat">Снять квартиру</a>
+            <a href="/rent/flat/">Снять квартиру</a>
         </div>
     </div>
 </span>
