--- a/ReHouse.FrontEnd/Views/Rent/Homestead.cshtml
+++ b/ReHouse.FrontEnd/Views/Rent/Homestead.cshtml
@@ -12,7 +12,7 @@
             <pre> </pre>
             <p>/</p>
             <pre> </pre>
-            <a href="/rent/homestead">Снять участок</a>
+            <a href="/rent/homestead/">Снять участок</a>
         </div>
     </div>
 </span>
