--- a/ReHouse.FrontEnd/Views/Rent/House.cshtml
+++ b/ReHouse.FrontEnd/Views/Rent/House.cshtml
@@ -12,7 +12,7 @@
             <pre> </pre>
             <p>/</p>
             <pre> </pre>
-            <a href="/rent/house">Снять дом</a>
+            <a href="/rent/house/">Снять дом</a>
         </div>
     </div>
 </span>
