--- a/ReHouse.FrontEnd/Views/Sale/Commerce.cshtml
+++ b/ReHouse.FrontEnd/Views/Sale/Commerce.cshtml
@@ -12,7 +12,7 @@
             <pre> </pre>
             <p>/</p>
             <pre> </pre>
-            <a href="/sale/commerce">Купить коммерческую</a>
+            <a href="/sale/commerce/">Купить коммерческую</a>
         </div>
     </div>
 </span>
