--- a/ReHouse.FrontEnd/Views/Sale/Detail.cshtml
+++ b/ReHouse.FrontEnd/Views/Sale/Detail.cshtml
@@ -62,7 +62,7 @@
                     break;
             }
 
-                <a href="/sale/@action">@desc</a>
+                <a href="/sale/@action/">@desc</a>
                 <pre> </pre>
                 <p>/</p>
                 <pre> </pre>
@@ -79,7 +79,7 @@
         <a onclick="addtocart(@Model.Advert.Id, '@Model.Advert.Type', true, this);" id="fav2"></a>
     </div>
     <div class="favorite1">
-        <a href="/email" id="favorite">Подать заявку</a>
+        <a href="/email/index?flat=@(Model.Advert.Id)&type=@((int)AdvertsType.Sale)" id="favorite">Подать заявку</a>
     </div>
 </div>
 <div class="share_icons">
