--- a/ReHouse.FrontEnd/Views/Sale/Flat.cshtml
+++ b/ReHouse.FrontEnd/Views/Sale/Flat.cshtml
@@ -14,7 +14,7 @@
             <pre> </pre>
             <p>/</p>
             <pre> </pre>
-            <a href="/sale/flat">Купить квартиру</a>
+            <a href="/sale/flat/">Купить квартиру</a>
         </div>
     </div>
 </span>
