--- a/ReHouse.FrontEnd/Views/Sale/Homestead.cshtml
+++ b/ReHouse.FrontEnd/Views/Sale/Homestead.cshtml
@@ -12,7 +12,7 @@
             <pre> </pre>
             <p>/</p>
             <pre> </pre>
-            <a href="/sale/homestead">Купить участок</a>
+            <a href="/sale/homestead/">Купить участок</a>
         </div>
     </div>
 </span>
