--- a/ReHouse.FrontEnd/Views/Sale/House.cshtml
+++ b/ReHouse.FrontEnd/Views/Sale/House.cshtml
@@ -12,7 +12,7 @@
             <pre> </pre>
             <p>/</p>
             <pre> </pre>
-            <a href="/sale/house">Купить дом</a>
+            <a href="/sale/house/">Купить дом</a>
         </div>
     </div>
 </span>
