--- a/ReHouse.FrontEnd/Views/Search/Flats.cshtml
+++ b/ReHouse.FrontEnd/Views/Search/Flats.cshtml
@@ -7,7 +7,7 @@
         <pre> </pre>
         <p>/</p>
         <pre> </pre>
-        <a href="/search/flats">Поиск</a>
+        <a href="/search/flats/">Поиск</a>
     </div>
 </div>
 <div class="h2novostroy"><h2>Найденные объявления</h2></div>
