--- a/ReHouse.FrontEnd/Views/Special/Sale.cshtml
+++ b/ReHouse.FrontEnd/Views/Special/Sale.cshtml
@@ -5,10 +5,9 @@
     TagPage tagPage = ViewBag.TagPage as TagPage;
 }
 <span class="none">
-
     <div class="navigation_string">
         <div class="way">
-            @Html.ActionLink("Главная", "index", "home")
+            <a href="/">Главная</a>
             <pre> </pre>
             <p>/</p>
             <pre> </pre>
