--- a/ReHouse.FrontEnd/Views/Feedback/Index.cshtml
+++ b/ReHouse.FrontEnd/Views/Feedback/Index.cshtml
@@ -59,7 +59,7 @@
         <pre> </pre>
         <p>/</p>
         <pre> </pre>
-        <a href="/feedback">Отзывы</a>
+        <a href="/feedback/">Отзывы</a>
     </div>
 </div>
 
