--- a/ReHouse.FrontEnd/Views/Home/About.cshtml
+++ b/ReHouse.FrontEnd/Views/Home/About.cshtml
@@ -17,7 +17,7 @@
         <pre> </pre>
         <p>/</p>
         <pre> </pre>
-        <a href="/home/about">О компании</a>
+        <a href="/home/about/">О компании</a>
     </div>
 </div>
 <div class="about_company">
