--- a/ReHouse.FrontEnd/Views/NewBuilding/Detail.cshtml
+++ b/ReHouse.FrontEnd/Views/NewBuilding/Detail.cshtml
@@ -35,7 +35,7 @@
                 <pre> </pre>
                 <p>/</p>
                 <pre> </pre>
-                <a href="/newbuilding">Новострои</a>
+                <a href="/newbuilding/">Новострои</a>
                 <pre> </pre>
                 <p>/</p>
                 <pre> </pre>
