--- a/ReHouse.FrontEnd/Views/Rent/Commerce.cshtml
+++ b/ReHouse.FrontEnd/Views/Rent/Commerce.cshtml
@@ -12,7 +12,7 @@
             <pre> </pre>
             <p>/</p>
             <pre> </pre>
-            <a href="/rent/commerce">Снять коммерцию</a>
+            <a href="/rent/commerce/">Снять коммерцию</a>
         </div>
     </div>
 </span>
