--- a/ReHouse.FrontEnd/Views/Vacancy/Index.cshtml
+++ b/ReHouse.FrontEnd/Views/Vacancy/Index.cshtml
@@ -4,11 +4,11 @@
 
 <div class="navigation_string">
     <div class="way">
-        @Html.ActionLink("Главная", "index", "home")
+        <a href="/">Главная</a>
         <pre> </pre>
         <p>/</p>
         <pre> </pre>
-        @Html.ActionLink("Вакансии агенства", "index", "vacancy")
+        <a href="/vacancy/">Вакансии агенства</a>
     </div>
 </div>
 <div class="about_company">
