--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/Shared/_Layout.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
     @Styles.Render("~/Content/adminCss")
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="~/Content/mobile.css">
+    @*<link rel="stylesheet" href="~/Content/mobile.css">*@
 
     <!-- TO TOP -->
     <script>
