--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/Shared/Advert/_filters.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/Shared/Advert/_filters.cshtml
@@ -200,7 +200,7 @@
                 </select>
             </div>
         }
-        @if (session != null && (session.Role.RussianName == ConstV.RoleAdministrator || session.Role.RussianName == ConstV.RoleManager))
+        @*@if (session != null && (session.Role.RussianName == ConstV.RoleAdministrator || session.Role.RussianName == ConstV.RoleManager))
         {
             <div class="ck">
                 <select id="managers">
@@ -218,7 +218,7 @@
                     }
                 </select>
             </div>
-        }
+        }*@
         @*<div class="checkbox_">
                 <select id="isonlyuser">
                     <option value="false">Все объявления</option>
