--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/Shared/_navigation.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/Shared/_navigation.cshtml
@@ -28,6 +28,7 @@
             </ol>
         </li>
         <li><a class="@(Model == "newbuilding"? "preActive active" : "1")" href="~/cabinet/newbuilding/list">Новострои</a></li>
+        <li><a class="@(Model == "users"? "preActive active" : "1")" href="~/cabinet/managers/list">Сотрудники</a></li>
         <li><a class="@(Model == "news"? "preActive active" : "1")" href="~/cabinet/news/list">Новости</a></li>
         <li><a class="@(Model == "feedbacks"? "preActive active" : "1")" href="~/cabinet/feedbacks/list">Отзывы</a></li>
         <li><a class="@(Model == "vacancies"? "preActive active" : "1")" href="~/cabinet/vacancies/list">Вакансии</a></li>
