--- a/ReHouse.FrontEnd/Views/NewBuilding/Index.cshtml
+++ b/ReHouse.FrontEnd/Views/NewBuilding/Index.cshtml
@@ -84,7 +84,7 @@
             <option selected value="0">Cрок сдачи</option>
             @foreach (var date in Model.ExpluatationDates)
             {
-                <option value="@date.Id">@date.Name</option>
+                <option value="@date.Year">@date.Name</option>
             }
         </select>
     </div>
