--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/Vacancies/Edit.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/Vacancies/Edit.cshtml
@@ -7,29 +7,35 @@
 
 <div id="adminka1" class="tabset_content tabset_content_active">
     <h2 class="tabset_label">adminka</h2>
-            
-        <div class="photo_of_manager">
-            <form enctype="multipart/form-data" action="" method="POST">
-                @Html.AntiForgeryToken()
-                @Html.HiddenFor(m => m.Id)
-                @Html.ValidationSummary()
-                <div class="contact_info">
-                    <table>                        
-                        <tr>
-                            <td>Заголовок:</td>
-                            <td>@Html.TextBoxFor(m => m.Title)</td>
-                        </tr>
-                        
-                        <tr>
-                            <td>Содержание:</td>
-                            <td>@Html.TextAreaFor(m => m.Description, new { @rows = "30", @cols = "30" })</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td><button>Сохранить</button></td>
-                        </tr>
-                    </table>
-                </div>
-            </form>
-        </div>
+
+    <div class="photo_of_manager">
+        <form enctype="multipart/form-data" action="" method="POST">
+            @Html.AntiForgeryToken()
+            @Html.HiddenFor(m => m.Id)
+            @Html.ValidationSummary()
+            <div class="contact_info">
+                <table>
+                    <tr>
+                        <td>Заголовок:</td>
+                        <td>@Html.TextBoxFor(m => m.Title)</td>
+                    </tr>
+
+                    <tr>
+                        <td>Содержание:</td>
+                        <td>@Html.TextAreaFor(m => m.Description, new { @rows = "30", @cols = "30" })</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td><button>Сохранить</button></td>
+                    </tr>
+                </table>
+            </div>
+        </form>
     </div>
+</div>
+
+<script>
+    $(function () {
+        $("textarea").jqte();
+    });
+</script>
