updates for new tz

--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/Shared/_Layout.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/Shared/_Layout.cshtml
@@ -213,7 +213,7 @@
             </div>
         </div>
         <div class="search">
-            <p><form class="form-search" method="get" action="/search" target="_blank"><input type="text" name="q" placeholder="Введите слово или фразу" value="" /></form></p>
+            <p><form class="form-search" method="get" action="/search/flats"><input type="text" name="q" placeholder="Поиск" value="" /></form></p>
         </div>
     </div>
     <div class="container" id="container">
