--- a/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
@@ -63,8 +63,8 @@
                 </div>
                 <div class="search">
                     <p>
-                        <form class="form-search" method="get" action="/search/flats" target="_blank">
-                            <input type="text" name="query" placeholder="Введите слово, фразу или id объекта" value="" />
+                        <form class="form-search" method="get" action="/search/flats">
+                            <input type="text" name="query" placeholder="Поиск" value="" />
                             <input type="submit" value="">
                         </form>
                     </p>
@@ -248,8 +248,8 @@
         </div>
         <div class="search">
             <p>
-                <form class="form-search" method="get" action="/search/flats" target="_blank">
-                    <input type="text" name="query" placeholder="Введите слово, фразу или id объекта" value="" />
+                <form class="form-search" method="get" action="/search/flats">
+                    <input type="text" name="query" placeholder="Поиск" value="" />
                     <input type="submit" value="">
                 </form>
             </p>
